# hhvm

./: .gitignore  CMakeLists.txt  SLACK_CHERRY_PICK.md  dwarf.nix  flake.nix  hhvm.nix
.github/workflows/: nix.yml  ubuntu.yml
CMake/: FindBoringSSL.cmake  FindLibDwarf.cmake  HHVMExtensionConfig.cmake  HHVMRenderConfigSpecification.cmake  HPHPCompiler.cmake  HPHPFindLibs.cmake  HPHPFunctions.cmake  HPHPSetup.cmake  Options.cmake
ci/ubuntu-22.04-jammy/debian/: rules
ci/ubuntu-24.04-noble/debian/: control  rules
hphp/: CMakeLists.txt
hphp/compiler/: compiler-systemlib.cpp  compiler.cpp  package.cpp
hphp/doc/: extension.new_functions
hphp/hack/: CMakeLists.txt  ocaml_deps_data.sh
hphp/hack/hhi/: implicit_context.hhi
hphp/hack/hhi/stdlib/: builtins_server.hhi
hphp/hack/scripts/: invoke_cargo.sh
hphp/hack/src/: Cargo.toml
hphp/hack/src/client/: clientLsp.ml
hphp/hhbbc/: index.cpp
hphp/hhvm/: CMakeLists.txt
hphp/runtime/: CMakeLists.txt
hphp/runtime/base/: double-to-int64.h  exceptions.h  package.cpp  program-functions.cpp  request-info.cpp  request-info.h  request-injection-data.h  runtime-option.cpp  runtime-option.h
hphp/runtime/server/: xbox-server.cpp  xbox-server.h
hphp/runtime/slack/: AdminServerStatsExporter.cpp
hphp/runtime/vm/: unit-parser.cpp
hphp/system/: CMakeLists.txt
hphp/test/ext/: test_xbox_abandon.php  test_xbox_init_sleep.php
hphp/tools/configs/: CMakeLists.txt  Cargo.toml
hphp/tools/gdb/: frame.py  gdbutils.py
hphp/util/: CMakeLists.txt  alloc-defs.h  alloc.cpp  alloc.h  hdf.h  hphp-config.h.in  process.cpp
(+30 files in other folders)
